fixed glitch with footer not spacing correctly when crowded by new divs

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,7 +14,7 @@ body {
   padding-bottom: 60px;;
   background-color:  #f5f5f5;
   min-height: 100%;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 
 .question-wrap {
